--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -24,7 +21,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-
+        <receiver android:name=".Utils.AlarmReceiver"> </receiver>
+        <receiver android:name=".Utils.JamatReceiver"> </receiver>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -33,41 +31,48 @@
             android:value="AIzaSyCXF9olyO3TYL7Z76Jn-9pVlfR5bx32SIY" />
 
         <activity android:name=".Screens.MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
+            </activity>
 
         <service
             android:name=".Network.FetchAddressIntentService"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <activity android:name=".Screens.Addjamat" />
+        <activity
+            android:name=".firebase_push_notification.auth_screens.SignupScreen"
+            android:label="@string/title_activity_signup"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".firebase_push_notification.auth_screens.ResetPasswordScreen"
+            android:label="@string/title_activity_reset_password"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".firebase_push_notification.auth_screens.LogInScreen"
+            android:label="@string/title_activity_profile_screen"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
 
-        <activity android:name=".Screens.Addjamat"></activity>
-        <activity
-                android:name=".firebase_push_notification.screens.SignupScreen"
-                android:label="@string/title_activity_signup"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity
-                android:name=".firebase_push_notification.screens.ResetPasswordScreen"
-                android:label="@string/title_activity_reset_password"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/title_activity_profile_screen"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
 
         <service android:name=".firebase_push_notification.services.FirebaseMessageService">
-             <intent-filter>
-                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-             </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
         </service>
+
+        <activity android:name=".Screens.Test">
+
+        </activity>
+
+        <service
+            android:name=".Utils.AlarmService"
+            android:enabled="true"
+            android:exported="true"></service>
 
     </application>
 
